--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
-Jan30-Session4-Assignment4/combinator-parsing-template/target/
-Jan30-Session4-Assignment4/combinator-parsion-template/project/
+#not included
+
+Jan30-Session4-Assignment4/combinator-parsingg-template/target/
+Jan30-Session4-Assignment4/combinator-parsiong-template/project/
